perasis/static_files/css/buttons.css
  /*URL LINKS START*/
a {

  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  color: #5696CB;
}

a:focus, a:hover {
  text-decoration: none;
  color: #f6891f;
}
/*URL LINKS END*/


.btn-circle {
  font-size: 26px;
  width: 55px;
  height: 55px;
  margin-top: 15px;
  line-height: 45px;
  -webkit-transition: background 0.3s ease-in-out;
  -moz-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  color: black;
  border: 3px solid black;
  border-radius: 100% !important;
  background: transparent;
}

.btn-circle:focus, .btn-circle:hover {
  color: #5696CB;
  border: 3px solid #5696CB;
  outline: none;
  background: rgba(255, 255, 255, 0.1);
}


.btn {
  font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight: 400;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  text-transform: uppercase;
  border-radius: 0;
}

.btn.btn-30percent{
  width: 30%;
}

.btn.btn-50percent{
  width: 50%;
}

.btn.btn-100percent{
  width: 100%;
}

.btn.btn-height-100percent{
  height: : 100%;
}

/**/
@media (max-width: 768px) {
.btn.btn-main-blue{
  background-color:#5696CB;
  border-radius: 0px;
  font-size: 14px;
  line-height: 25px;
  color: #ffffff;
}
}
@media (min-width: 768px) {
.btn.btn-main-blue{
  background-color:#5696CB;
  border-radius: 0px;
  font-size: 20px;
  line-height: 30px;
  color: #ffffff;
}
}


.btn-main-blue:focus, .btn-main-blue:hover {
  color: #ffffff;
  border: 1px solid #5696CB;
  outline: none;
  background-color: #3271a4;
}

@media (max-width: 768px) {
  .btn.btn-blue-title{
    background-color:#5696CB;
    border-radius: 0px;
    font-size: 15px;
    line-height: 14px;
    color: #ffffff;
  }
}

@media (min-width: 768px) {
  .btn.btn-blue-title{
    background-color:#5696CB;
    border-radius: 0px;
    font-size: 20px;
    line-height: 30px;
    color: #ffffff;
  }
}

.btn-blue-title:focus, .btn-main-blue-title:hover {
  color: #ffffff;
  border: 1px solid #5696CB;
  outline: none;
  background-color: #3271a4;
}


.btn-big {
    font-size: 22px;
    line-height: 22px;
    padding-top: 15px;
    padding-right: 20px;
    padding-bottom: 15px;
    padding-left: 20px;
    border-radius: 0px;
}


@media (max-width: 768px) {
  .btn.btn-white-blue{
    margin-top: 5px;
    margin-bottom: 0px;
    border-radius: 0px;
    font-size: 13px;
    line-height: 10px;
    color: #5696CB;
    border: 1px solid #5696CB;
    background-color: transparent;
  }
}

@media (min-width: 768px) {
  .btn.btn-white-blue{
    margin-top: 5px;
    margin-bottom: 3px;
    margin-right: 5px;
    margin-left: 5px;
    border-radius: 0px;
    color: #5696CB;
    border: 1px solid #5696CB;
    background-color: transparent;
  }
  }


.btn-white-blue:focus, .btn-white-blue:hover {
  color: #ffffff;
  border: 1px solid #5696CB;
  outline: none;
  background-color: #5696CB;
}

@media (min-width: 768px) {
  .btn.btn-main-orange-note{
    color: #ffffff;
    background-color:#f6891f;
    border-radius: 0px;
    font-size: 20px;
    line-height: 30px;
    width: 30%;
  }

  .btn.btn-main-orange-link{
    color: #ffffff;
    background-color:#f6891f;
    border-radius: 0px;
    font-size: 20px;
    line-height: 30px;
    width: 100%;
  }

}
@media (max-width: 768px) {
  .btn.btn-main-orange-mob{
    color: #ffffff;
    background-color:#f6891f;
    border-radius: 0px;
    line-height: 30px;
    width: 100%;
  }
}


.btn-main-orange-mob:focus, .btn-main-orange-mob:hover {
  color: #ffffff;
  border: 1px solid #bf6308;
  outline: none;
  background-color: #e6780a;
}


.btn.btn-dashboard-pa-submit{
  background-color:#5696CB;
  color: #ffffff;
  width: 50%;
  border-radius: 55px;
  font-size: 18px;
  line-height: 25px;
  display: block;
  margin-left: auto;
  margin-right: auto
}

.btn-dashboard-pa-submit:focus, .btn-dashboard-pa-submit:hover {
  color: #ffffff;
  border: 1px solid #5696CB;
  outline: none;
  background-color: #3271a4;
}

.btn.btn-dashboard-pa-list-commands{
  background-color:#5696CB;
  color: #ffffff;
  width: 50%;
  border-radius: 0px;
  font-size: 12px;
  line-height: 18px;
  display: block;
  margin-top:10px;
  margin-left: auto;
  margin-right: auto
}

.btn-dashboard-pa-list-commands:focus, .btn-dashboard-pa-list-commands:hover {
  color: #ffffff;
  border: 1px solid #5696CB;
  outline: none;
  background-color: #3271a4;
}

